# traktor-kontrol-s4-mk1-driver-linux

./: AGENTS.md  CMakeLists.txt  README.md  config.json  main.cpp
classes/: AlsaHelper.cpp  Button.cpp  EvDevEvent.cpp  EvDevHelper.cpp  Jog.cpp  Knob.cpp  Led.cpp  LedWriter.cpp  MidiEventOut.cpp  MidiHelper.cpp  PerfCounters.cpp  Slider.cpp  UtilsHelper.cpp
includes/: AlsaHelper.h  EvDevEvent.h  EvDevHelper.h  Jog.h  Knob.h  LedWriter.h  MidiEventOut.h  MidiHelper.h  PerfCounters.h  UtilsHelper.h
mappings/mixxx/: Traktor-Kontrol-S4-mk1.js  TraktorKontrol_S4_MK1_JFM.midi.xml
tools/replay_evdev_trace/: main.cpp  stubs.cpp
tools/replay_evdev_trace/test_traces/: cue_press.txt  deck_toggle_with_jog.txt  headphone_press.txt  jog_rotation.txt  jog_touch.txt
